// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statements class 1`] = `
"
code:

class a {}

exploded:

  exports: []
  imports: []
  statements:
    - ClassDeclaration (1:0,1:10)
        body: ClassBody (1:8,1:10)
          body: []
        id: Identifier (1:6,1:7)
          name: 'a'
        superClass: null"
`;

exports[`statements empty 1`] = `
"
code:

;

exploded:

  exports: []
  imports: []
  statements: []"
`;

exports[`statements for 1`] = `
"
code:

for (;;) {}

exploded:

  exports: []
  imports: []
  statements:
    - ForStatement (1:0,1:11)
        body: BlockStatement (1:9,1:11)
          body: []
          directives: []
        init: null
        test: null
        update: null"
`;

exports[`statements function 1`] = `
"
code:

function a() {}

exploded:

  exports: []
  imports: []
  statements:
    - FunctionDeclaration (1:0,1:15)
        async: false
        body: BlockStatement (1:13,1:15)
          body: []
          directives: []
        expression: false
        generator: false
        id: Identifier (1:9,1:10)
          name: 'a'
        params: []"
`;

exports[`statements interface 1`] = `
"
code:

interface a {}

exploded:

  exports: []
  imports: []
  statements:
    - InterfaceDeclaration (1:0,1:14)
        body: ObjectTypeAnnotation (1:12,1:14)
          callProperties: []
          exact: false
          indexers: []
          properties: []
        extends: []
        id: Identifier (1:10,1:11)
          name: 'a'
        mixins: []
        typeParameters: null"
`;

exports[`statements type alias 1`] = `
"
code:

type a = {};

exploded:

  exports: []
  imports: []
  statements:
    - TypeAlias (1:0,1:12)
        id: Identifier (1:5,1:6)
          name: 'a'
        right: ObjectTypeAnnotation (1:9,1:11)
          callProperties: []
          exact: false
          indexers: []
          properties: []
        typeParameters: null"
`;

exports[`statements variable 1`] = `
"
code:

var a;

exploded:

  exports: []
  imports: []
  statements:
    - VariableDeclaration (1:4,1:5)
        declarations:
          - VariableDeclarator (1:4,1:5)
              id: Identifier (1:4,1:5)
                name: 'a'
              init: null
        innerComments: undefined
        kind: 'var'
        leadingComments: undefined
        trailingComments: undefined"
`;

exports[`statements variable multiple 1`] = `
"
code:

var a, b;

exploded:

  exports: []
  imports: []
  statements:
    - VariableDeclaration (1:4,1:5)
        declarations:
          - VariableDeclarator (1:4,1:5)
              id: Identifier (1:4,1:5)
                name: 'a'
              init: null
        innerComments: undefined
        kind: 'var'
        leadingComments: undefined
        trailingComments: undefined
    - VariableDeclaration (1:7,1:8)
        declarations:
          - VariableDeclarator (1:7,1:8)
              id: Identifier (1:7,1:8)
                name: 'b'
              init: null
        innerComments: undefined
        kind: 'var'
        leadingComments: undefined
        trailingComments: undefined"
`;

exports[`statements while 1`] = `
"
code:

while (a) {}

exploded:

  exports: []
  imports: []
  statements:
    - WhileStatement (1:0,1:12)
        body: BlockStatement (1:10,1:12)
          body: []
          directives: []
        test: Identifier (1:7,1:8)
          name: 'a'"
`;
